# person-following-sys

./: .dockerignore  Dockerfile  README.md  clothing_matcher_lab_openclip.py  docker-compose.yml  main.py  person_following_system.py  pyproject.toml  start_person_following.sh  target_state.py  test_clothing_matcher_lab_openclip.py  tracked_person_publisher.py  tracked_person_publisher_ros.py  yolo_detector.py
launch/: person_following_launch.py
src/: person_follower.py  person_following_command.py  start_person_following.sh  tracked_person_publisher_ros.py
