[project]
name = "person-following-system"
version = "0.1.0"
description = "Person Following System for NVIDIA Jetson Thor with RealSense and ROS 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "opencv-python<4.10",
    "pycuda",
    "ultralytics",
    "onnx",
    "onnxruntime",
    "open-clip-torch",
    "boxmot",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.1.0",
    "pyright>=1.1.406",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
addopts = "-v"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = ".venv"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip_glob = [".venv*"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["E203", "E501", "D100", "D104", "D200", "D205", "D401", "D404"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"
